<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/job_navigation"
    app:startDestination="@+id/navigation_job">

    <fragment
        android:id="@+id/navigation_job"
        android:name="com.example.newtext.Job.JobFragment"
        android:label="@string/title_job"
        tools:layout="@layout/fragment_job" />

    <fragment
        android:id="@+id/navigation_record"
        android:name="com.example.newtext.Job.RecordFragment"
        android:label="@string/title_record"
        tools:layout="@layout/fragment_record" />
    <fragment
        android:id="@+id/navigation_resume"
        android:name="com.example.newtext.Job.ResumeFragment"
        android:label="@string/title_resume"
        tools:layout="@layout/fragment_resume"/>

</navigation>